--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -127,7 +127,7 @@
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Me!</span></h2>
 
-      <form action="#">
+      <form action="#" name="submit-to-google-sheet">
         <div class="input-box">
           <input type="text" placeholder="Full Name">
           <input type="email" placeholder="Email Address">
@@ -139,6 +139,8 @@
         <textarea name="" id="" cols="10" rows="5" placeholder="Your Message"></textarea>
         <input type="submit" value="Send Message" class="btn">
       </form>
+      <span id="msg"></span>
+
     </section>
 
     <!-- footer design -->
